<resources>
    <string name="app_title" translatable="false">Paintology - Trace Drawing</string>
    <string name="splash_app_title" translatable="false">Trace Drawing - Learn Fast</string>
    <string name="app_share_title" translatable="false">Paintology - Trace Drawing</string>
    <string name="login_with_guest">Login as guest\n(no email required)</string>
    <string name="app_name">Paintology Gamify</string>
    <string name="brush_rubber" translatable="false">eraser</string>
    <string name="brush_rainbow" translatable="false">rainbow</string>
    <string name="brush_inkpen" translatable="false">ink pen</string>
    <string name="brush_spray" translatable="false">shade</string>
    <string name="brush_line" translatable="false">line</string>
    <string name="brush_emboss" translatable="false">emboss</string>
    <string name="brush_watercolor" translatable="false">watercolor</string>
    <string name="brush_sketchline" translatable="false">sketch pen</string>
    <string name="brush_sketch" translatable="false">sketch fill</string>
    <string name="brush_sketchfur" translatable="false">sketch wire</string>
    <string name="brush_sketchsingle" translatable="false">sketch oval</string>
    <string name="brush_felt" translatable="false">felt</string>
    <string name="brush_halo" translatable="false">halo</string>
    <string name="brush_outline" translatable="false">outline</string>
    <string name="brush_dash_line" translatable="false">dash line</string>
    <string name="brush_cube_line" translatable="false">cube line</string>
    <string name="heading_brackets" translatable="false">%1$s (%2$d)</string>
    <string name="client_id" translatable="false">630555728705-hq7jk88i92udabkg7ur8hdk1tr7e1k2c.apps.googleusercontent.com</string>
    <string name="authority" translatable="false">com.paintology.lite.trace.drawing.fileprovider</string>
    <string name="admobID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="facebook_app_id" translatable="false">545949722813629</string>
    <string name="facebook_client_token" translatable="false">5d9e91c4a1389889de3eb5b230a74c2a</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb545949722813629</string>
    <string name="_13_k1" translatable="false">13</string>
    <string name="default_notification_channel_id" translatable="false">Paintology_default_channel</string>
    <string name="https_play_google_com_store_apps_developer_id_paintology" translatable="false">https://play.google.com/store/apps/developer?id=Paintology</string>
    <string name="https_policies_google_com_privacy" translatable="false">https://policies.google.com/privacy</string>
    <string name="https_policies_google_com_technologies_ads" translatable="false">https://policies.google.com/technologies/ads</string>
    <string name="https_www_youtube_com_intl_us_about_policies_community_guidelines" translatable="false">https://www.youtube.com/intl/us/about/policies/#community-guidelines</string>
    <string name="https_firebase_google_com_support_privacy" translatable="false">https://firebase.google.com/support/privacy</string>
    <string name="https_play_google_com" translatable="false">https://play.google.com/store/apps/details?id=com.paintology.lite</string>
    <string name="https_play_google_com_s" translatable="false">https://play.google.com/store/apps/details?id=com.paintology.recorder</string>
    <string name="https_www_paintology_com" translatable="false">https://www.paintology.com</string>
    <string name="https_www_youtube_com_paintology" translatable="false">https://www.youtube.com/@Paintology</string>
    <string name="https_www_youtube_com_ferdouse" translatable="false">https://www.youtube.com/@Ferdouse</string>
    <string name="https_www_youtube_com_paintology_streams" translatable="false">https://www.youtube.com/@Paintology/streams</string>
    <string name="https_www_youtube_com_ferdouse_shorts" translatable="false">https://www.youtube.com/@Ferdouse/shorts</string>
    <string name="https_paintology_quora_com" translatable="false">https://paintology.quora.com</string>
    <string name="https_www_quora_com_profile_ferdouse_khaleque" translatable="false">https://www.quora.com/profile/Ferdouse-Khaleque</string>
    <string name="https_allpoetry_com_ferdouse" translatable="false">https://allpoetry.com/Ferdouse</string>
    <string name="https_ferdouse_com" translatable="false">https://ferdouse.com</string>
    <string name="https_forms_gle_ozskjgypz9x8f5yx8" translatable="false">https://forms.gle/ozsKJGYPZ9X8F5YX8</string>
    <string name="https_www_udemy_com_courses_search_p_2_q_paintology_src_ukw" translatable="false">https://www.udemy.com/courses/search/?p=2&amp;q=paintology&amp;src=ukw</string>
    <string name="https_www_facebook_com_paintology_apps" translatable="false">https://www.facebook.com/Paintology.apps</string>
    <string name="https_www_tiktok_com_paintology3" translatable="false">https://www.tiktok.com/@paintology3</string>
    <string name="https_www_instagram_com_paintology_app" translatable="false">https://www.instagram.com/paintology.app/</string>
    <string name="https_www_instagram_com_ferdousekhal" translatable="false">https://www.instagram.com/ferdousekhal/</string>
    <string name="https_www_ferdouse_com" translatable="false">https://www.ferdouse.com/</string>
    <string name="https_medium_com_ferdousekhaleque" translatable="false">https://medium.com/@ferdousekhaleque</string>
    <string name="https_www_patreon_com_paintology" translatable="false">https://www.patreon.com/paintology</string>
    <string name="https_twitter_com_semibase" translatable="false">https://twitter.com/Semibase</string>
    <string name="https_www_reddit_com_user_ferdousek" translatable="false">https://www.reddit.com/user/FerdouseK</string>
    <string name="https_www_pinterest_com_ferdousekhaleque" translatable="false">https://www.pinterest.com/FerdouseKhaleque/</string>
    <string name="https_www_pinterest_com_paintology" translatable="false">https://www.pinterest.com/Paintology</string>
    <string name="prefix_facebook_url" translatable="false">https://facebook.com/</string>
    <string name="prefix_insta_url" translatable="false">https://instagram.com/</string>
    <string name="prefix_yt_url" translatable="false">https://youtube.com/</string>
    <string name="prefix_tiktok_url" translatable="false">https://tiktok.com/</string>
    <string name="prefix_pinterest_url" translatable="false">https://pinterest.com/</string>
    <string name="prefix_quora_url" translatable="false">https://quora.com/</string>
    <string name="prefix_twitter_url" translatable="false">https://twitter.com/</string>
    <string name="prefix_linkedin_url" translatable="false">https://linkedin.com/</string>
    <string name="prefix_facebook_url_2" translatable="false">https://www.facebook.com/</string>
    <string name="prefix_insta_url_2" translatable="false">https://www.instagram.com/</string>
    <string name="prefix_yt_url_2" translatable="false">https://www.youtube.com/</string>
    <string name="prefix_tiktok_url_2" translatable="false">https://www.tiktok.com/</string>
    <string name="prefix_pinterest_url_2" translatable="false">https://www.pinterest.com/</string>
    <string name="prefix_quora_url_2" translatable="false">https://www.quora.com/</string>
    <string name="prefix_twitter_url_2" translatable="false">https://www.twitter.com/</string>
    <string name="community">Community</string>
    <string name="draw">Draw</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="save">SAVE</string>
    <string name="help_guide">Help Guide</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="paintology_chat">Paintology Chat</string>
    <string name="action_line">Line</string>
    <string name="action_smoothline">Smoothline</string>
    <string name="action_square">Square</string>
    <string name="action_circle">Circle</string>
    <string name="action_rectangle">Rectangle</string>
    <string name="action_triangle">Triangle</string>
    <string name="gallery">Gallery</string>
    <string name="view_mode">View Mode</string>
    <string name="freehand">Freehand</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="add_text">Add Text</string>
    <string name="open">Open</string>
    <string name="open_tutorial">Open tutorial</string>
    <string name="chat">Chat</string>
    <string name="open_in_trace">Open in Trace</string>
    <string name="open_in_overlay">Open in Overlay</string>
    <string name="open_trace_only">Open Trace Only</string>
    <string name="open_drawing_only">Open Drawing Only</string>
    <string name="login">Login</string>
    <string name="tutorials">Tutorials</string>
    <string name="favorites">Favorites</string>
    <string name="help_intro">Help Intro</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="video_guides">Video Guides</string>
    <string name="profile">Profile</string>
    <string name="date_ascending_default">Date Ascending</string>
    <string name="date_descending">Date Descending (default)</string>
    <string name="ratings">Ratings</string>
    <string name="comments">Comments</string>
    <string name="posts_number">Posts Number</string>
    <string name="tutorials_default">Tutorials</string>
    <string name="by_levels">By Levels</string>
    <string name="by_awards">By Awards</string>
    <string name="publish_community">Publish Community</string>
    <string name="post_gallery">Post Gallery</string>
    <string name="favourites">Favourites</string>
    <string name="store">Store</string>
    <string name="quick_draw">Quick Draw</string>
    <string name="share_paintology_with_others">Share Paintology with Others</string>
    <string name="watch_intro_video">Watch intro video</string>
    <string name="share_feedback">Share feedback</string>
    <string name="go_to_google_playstore">Go to Google Playstore</string>
    <string name="my_paintings">My Paintings</string>
    <string name="drawing_activity">Drawing Activity</string>
    <string name="post">Post</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="app_support">App Support</string>
    <string name="remove_favourite">Remove Favorite</string>
    <string name="copy_link">Copy Link</string>
    <string name="open_in_canvas_overlay">Open in Canvas (overlay)</string>
    <string name="open_in_canvas_trace">Open in Canvas (trace)</string>
    <string name="users_posts">Users Posts</string>
    <string name="download">Download</string>
    <string name="report">Report</string>
    <string name="go_to_youtube_video">Go to youtube video</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="chat_unavailable">Chat Unavailable</string>
    <string name="you_must_follow_bochhi_and_be_followed_back_to_start_chatting_make_sure_both_of_you_follow_each_other_to_unlock_chat">You must follow Bochhi and be followed back to start chatting. Make sure both of you follow each other to unlock chat.</string>
    <string name="date_descending_default">Date Descending (Default)</string>
    <string name="date_ascending">Date Ascending</string>
    <string name="ratin">Ratings</string>
    <string name="likes">Likes</string>
    <string name="comment">Comments</string>
    <string name="tutorials_defaul">Tutorials (Default)</string>
    <string name="freehand_defaul">Freehand (Default)</string>
    <string name="by_level">By Levels</string>
    <string name="favorite">Favorites</string>
    <string name="pg_big_points">Big Points</string>
</resources>