<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/drawer_profile_icon"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_quick_draw"
            android:icon="@drawable/drawer_quickdraw_icon"
            android:title="@string/quick_draw" />

        <item
            android:id="@+id/nav_draw"
            android:icon="@drawable/drawer_quickdraw_icon"
            android:title="@string/draw" />

        <item
            android:id="@+id/nav_big_points"
            android:icon="@drawable/drawer_big_points_icon"
            android:title="@string/pg_big_points" />

        <item
            android:id="@+id/nav_my_drawing"
            android:icon="@drawable/drawer_mypaintings_icon"
            android:title="@string/my_paintings" />

        <item
            android:id="@+id/nav_tutorials"
            android:icon="@drawable/videos"
            android:title="@string/tutorials" />

        <item
            android:id="@+id/nav_drawing_activity"
            android:icon="@drawable/draw"
            android:title="@string/drawing_activity" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/gallery"
            android:title="@string/gallery" />

        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/drawer_community"
            android:title="@string/community" />
        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/drawer_linksforyou_icon"
            android:title="@string/post" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/drawer_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat_icon"
            android:title="@string/paintology_chat"
            app:iconTint="@color/colorPrimary" />
        <!--        <item-->
        <!--            android:id="@+id/nav_links"-->
        <!--            android:icon="@drawable/drawer_linksforyou_icon"-->
        <!--            android:title="Links For You" />-->

        <item
            android:id="@+id/navv_store"
            android:icon="@drawable/store"
            android:title="@string/store" />

        <item
            android:id="@+id/navv_favorite"
            android:icon="@drawable/fav_pink"
            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_help_intro"
            android:icon="@drawable/ic_help_intro"
            android:title="@string/help_intro" />

        <item
            android:id="@+id/nav_video_guides"
            android:icon="@drawable/ic_video_guide"
            android:title="@string/video_guides" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/drawer_rate_icon"
            android:title="@string/rate_the_app" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/drawer_share_icon"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_help_guide"
            android:icon="@drawable/drawer_help_icon"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/drawer_language_icon"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/drawer_about_icon"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/drawer_about_icon"
            android:title="@string/app_support" />
        <item
            android:id="@+id/nav_intro"
            android:icon="@drawable/baseline_interests_24"
            android:title="@string/help_guide" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/drawer_login_icon"
            android:title="@string/login" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/logout" />


        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_log_out"
            android:title="@string/exit" />
    </group>

</menu>