<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_line"
        android:orderInCategory="100"
        android:title="@string/action_line"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_smoothline"
        android:orderInCategory="100"
        android:title="@string/action_smoothline"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_rectangle"
        android:orderInCategory="100"
        android:title="@string/action_rectangle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_square"
        android:orderInCategory="100"
        android:title="@string/action_square"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_circle"
        android:orderInCategory="100"
        android:title="@string/action_circle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_triangle"
        android:orderInCategory="100"
        android:title="@string/action_triangle"
        app:showAsAction="never" />


</menu>