<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_mode"
        android:title="@string/view_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_paintology"
        android:title="@string/share_paintology_with_others"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_watch_intro_video"
        android:title="@string/watch_intro_video"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:title="@string/share_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_playstore"
        android:title="@string/go_to_google_playstore"
        app:showAsAction="never" />
</menu>