<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/rate_dialog_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_unavailable"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_must_follow_bochhi_and_be_followed_back_to_start_chatting_make_sure_both_of_you_follow_each_other_to_unlock_chat"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClosee"
        android:background="@drawable/bg_btn_dialog_rounded_blue"
        android:layout_width="100dp"
        android:gravity="center"
        android:textSize="17sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:layout_height="50dp"
        android:text="@string/close"
        android:layout_below="@id/tvMessage"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
